Adding homepage link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 <body>
 	<main class="container">
 		<section class="about">
+			<img src="{{ "/assets/portfolio.jpg" | relative_url }}" alt="{{ site.plainwhite.name }}">
+
 			<h2>{{ site.plainwhite.name }}</h2>
 			<p class="tagline">{{ site.plainwhite.tagline }}</p>
 			<ul class="social">
