--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -13,7 +13,7 @@ $leftWidth: 220px;
 }
 
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	font-size: 16px;
 	line-height: 1.2em;
 	margin: 0;
@@ -159,7 +159,7 @@ main {
 	padding-left: 40px;
 }
 .post {
-	font-family: 'Merriweather', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	font-weight: 300;
 	color: #222;
 	line-height: 1.9em;
