--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,11 @@
 <body>
 	<main class="container">
 		<section class="about">
+		<a href="/">
 			<img src="{{ "/assets/portfolio.jpg" | relative_url }}" alt="{{ site.plainwhite.name }}">
-
 			<h2>{{ site.plainwhite.name }}</h2>
-			<p class="tagline">{{ site.plainwhite.tagline }}</p>
+		</a>
+		<p class="tagline">{{ site.plainwhite.tagline }}</p>
 			<ul class="social">
 				<a href="https://github.com/{{ site.plainwhite.social_links.github }}">
 					<li><i class="icon-github-circled"></i></li>
