For some reason scss is not regenerating

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <body>
 	<main class="container">
 		<section class="about">
-		<a href="/">
+		<a href="/" style="text-decoration: underline;">
 			<img src="{{ "/assets/portfolio.jpg" | relative_url }}" alt="{{ site.plainwhite.name }}">
 			<h2>{{ site.plainwhite.name }}</h2>
 		</a>
