--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -13,7 +13,7 @@ $leftWidth: 220px;
 }
 
 body {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Helvetica', serif;
 	font-size: 16px;
 	line-height: 1.2em;
 	margin: 0;
@@ -43,21 +43,21 @@ main {
 
 	@media screen and (min-width: $bigScreenW) {
 		margin: 0 auto;
-		max-width: 1440px;	
+		max-width: 1440px;
 	}
 	@media screen and (max-width: 1280px) {
-		margin: 0 75px;	
+		margin: 0 75px;
 	}
 	@media screen and (max-width: 1024px){
-		margin: 0 35px;	
+		margin: 0 35px;
 	}
 
 	@media screen and (max-width: $mobileW) {
 		margin: 0 10px;
-		flex-direction: column;	
+		flex-direction: column;
 	}
 	@media screen and (max-width: $smallMobileW) {
-		margin: 0;	
+		margin: 0;
 	}
 
 	.content {
@@ -71,7 +71,7 @@ main {
 		height: 100vh;
 		padding-bottom: 15vh;
 		@media screen and (max-width: $mobileW) {
-			height: auto;	
+			height: auto;
 			padding: 10vh 0;
 		}
 		@media screen and (min-width: $mobileW + 1) {
@@ -151,7 +151,7 @@ main {
 		margin-right: 20px;
 	}
 	@media screen and (max-width: $mobileW){
-		padding: 0 !important;	
+		padding: 0 !important;
 		margin-top: 0;
 	}
 }
@@ -159,7 +159,7 @@ main {
 	padding-left: 40px;
 }
 .post {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Helvetica', serif;
 	font-weight: 300;
 	color: #222;
 	line-height: 1.9em;
